2008-03-12  Neil Jerram  <neil@ossau.uklinux.net>

	* debugging/.cvsignore: New.

	* debugger/commands.scm (evaluate, info-args, info-frame,
	position, up, down): Improve/fix doc strings.

	* Makefile.am (SUBDIRS): Add debugging.
	(ice9_sources): Add gds-client.scm and gds-server.scm.

	* debugging/Makefile.am, debugging/example-fns.scm,
	debugging/ice-9-debugger-extensions.scm, debugging/steps.scm,
	debugging/trace.scm, debugging/traps.scm, debugging/trc.scm: New
	(merged with modifications from CVS HEAD).

	* gds-client.scm, gds-server.scm: New (merged with modifications
	from CVS HEAD).

2008-02-22  Ludovic Courtès  <ludo@gnu.org>

	* match.scm: Export `match:andmap'.  This fixes evaluation of
	expressions like `(match expr (((_ ...) ...) #t))' where a list
	of lists is to be matched.

2008-01-22  Neil Jerram  <neil@ossau.uklinux.net>

	* COPYING: Removed.

2007-10-02  Ludovic Courtès  <ludo@gnu.org>

	* slib.scm: Let SLIB's `guile.init' do most of the job.  See the
	`guile-devel@gnu.org' mailing list archive for details.

2007-09-01  Andy Wingo  <wingo@pobox.com>

	* boot-9.scm (duplicate-handlers)[warn, warn-override-core]:
	Send warnings to `stderr' instead of `stdout'.

2007-08-08  Ludovic Courtès  <ludo@gnu.org>

	* boot-9.scm (%record-type-check): Renamed to
	`%record-type-error'.
	(record-accessor): Directly use `struct-vtable' and
	`struct-ref', thereby avoiding indirections and procedure-call
	overhead.
	(record-modifier): Likewise.

2007-06-13  Ludovic Courtès  <ludo@chbouib.org>

	* boot-9.scm (module-make-local-var!): Simplified.  No need to
	check for the value of a same-named imported binding since the
	newly created variable is systematically assigned afterwards.

2007-01-04  Kevin Ryde  <user42@zip.com.au>

	* boot-9.scm (top-repl): Check (defined? 'SIGBUS) before using that
	value, there's no such signal on mingw.  Reported by Cesar Strauss.

2006-12-13  Kevin Ryde  <user42@zip.com.au>
